# RedLight

./: .gitignore  CMakeLists.txt  ext_c.cpp  license.lic  main.cpp  model_infer.h  model_person.h  model_test.cpp  model_test.h
FaceDetector/: FaceDetector.cpp  FaceDetector.h
common/: common.cpp  common.h
ldmark/: ldmark.h
lib/: libmnn.dylib
model_infer/: mnn_infer.h
object/: ObjectDetect.cpp  ObjectDetect.h
persondet/: PersonDetect.cpp  PersonDetect.h
